[metadata]
name = xlsx_streaming
version = 2.0.1.dev0
description = Export your data as an xlsx stream
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Polyconseil/xlsx_streaming/
author = Polyconseil
author_email = opensource+xlsx_streaming@polyconseil.fr
maintainer = Polyconseil
maintainer_email = opensource+xlsx_streaming@polyconseil.fr
license = GNU GPLv3
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = xlsx, excel, streaming
platform = any


[options]
packages = find:
python_requires = >= 3.8
install_requires =
    zipstream>=1.1.3

[options.packages.find]
exclude =
    tests*
    docs*

[zest.releaser]
create-wheel = yes
